--- a/index.html
+++ b/index.html
@@ -5,52 +5,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>The Goddess Xperience</title>
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css">
+  <script src="js/main.js" defer></script>
 </head>
 <body>
 
-  <section class="section hero" id="hero" data-aos="fade-up">
-    <div class="container">
-      <h1 class="title">Welcome to The Goddess Xperience</h1>
-      <p class="subtitle">Unlock your divine potential.</p>
-    </div>
-  </section>
+<header class="header">
+  <h1 class="logo">The Goddess Xperience</h1>
+  <nav>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="experience.html">Xperience</a></li>
+      <li><a href="packages.html">Packages</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="apply.html">Apply</a></li>
+    </ul>
+  </nav>
+</header>
 
-  <section class="section experience" id="experience" data-aos="fade-up">
-    <div class="container">
-      <h2 class="section-title">The Experience</h2>
-      <p class="section-text">Sample text about the services offered here. You can customize this later as needed.</p>
-    </div>
-  </section>
+<section class="hero">
+  <!-- Upload banner image as 'banner1.jpg' in media folder -->
+  <img src="media/banner1.jpg" alt="Hero Banner" class="hero-image">
+  <div class="hero-text">
+    <h2>Enter the Realm of the Goddess</h2>
+    <p>Where your Xperience begins...</p>
+  </div>
+</section>
 
-  <section class="section pricing" id="pricing" data-aos="fade-up">
-    <div class="container">
-      <h2 class="section-title">Pricing</h2>
-      <div class="card-grid">
-        <div class="card" data-aos="zoom-in">
-          <h3>Basic</h3>
-          <p>$100/session</p>
-        </div>
-        <div class="card" data-aos="zoom-in" data-aos-delay="100">
-          <h3>Premium</h3>
-          <p>$250/session</p>
-        </div>
-        <div class="card" data-aos="zoom-in" data-aos-delay="200">
-          <h3>Elite</h3>
-          <p>$500/session</p>
-        </div>
-      </div>
-    </div>
-  </section>
+<section class="intro">
+  <h2>Welcome to the Ultimate Xperience</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+     Curabitur et pulvinar elit, at sagittis lorem.</p>
+</section>
 
-  <section class="section contact" id="contact" data-aos="fade-up">
-    <div class="container">
-      <h2 class="section-title">Contact</h2>
-      <p class="section-text">Email: goddess@example.com</p>
-    </div>
-  </section>
+<footer class="footer">
+  <p>© 2025 The Goddess Xperience</p>
+</footer>
 
-  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  <script src="js/script.js"></script>
 </body>
 </html>
