--- a/index.html
+++ b/index.html
@@ -6,139 +6,170 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
   <style>
-    body, html {
+    * {
+      box-sizing: border-box;
+    }
+    html, body {
       margin: 0;
       padding: 0;
       font-family: 'Montserrat', sans-serif;
+      background-color: #000;
+      color: #fff;
       scroll-behavior: smooth;
-      background: #0f0d0e;
-      color: #f5f1f3;
     }
     nav {
       position: fixed;
       top: 0;
       right: 0;
-      padding: 20px;
-      z-index: 10;
+      width: 100%;
+      display: flex;
+      justify-content: flex-end;
+      background: rgba(0, 0, 0, 0.7);
+      padding: 15px 30px;
+      z-index: 1000;
     }
     nav a {
-      margin-left: 20px;
+      color: #fff;
       text-decoration: none;
-      color: #e0c1d3;
+      margin-left: 30px;
       font-weight: 600;
       transition: color 0.3s;
     }
     nav a:hover {
-      color: #ffffff;
+      color: crimson;
     }
-    .section {
-      padding: 100px 50px;
-      text-align: center;
+    section {
+      padding: 100px 20px;
     }
     .home {
       position: relative;
       height: 100vh;
-      color: white;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
     .home video {
       position: absolute;
       top: 0;
       left: 0;
-      object-fit: cover;
       width: 100%;
       height: 100%;
+      object-fit: cover;
       z-index: -1;
       filter: brightness(0.4);
     }
     .home .content {
-      position: relative;
-      top: 50%;
-      transform: translateY(-50%);
       text-align: center;
     }
     .home h1 {
       font-size: 3em;
-      margin-bottom: 10px;
-      color: #e6d4c7;
+      color: white;
     }
     .home p {
       font-size: 1.2em;
-      color: #f5f1f3;
+      color: #f3f3f3;
     }
     .about {
-      background: linear-gradient(to right, #1e1b1c, #3d2b30);
       display: flex;
+      flex-direction: column;
       align-items: center;
-      justify-content: center;
-      gap: 40px;
-      padding: 100px;
+      background-color: #0a0a0a;
+      text-align: center;
     }
     .about img {
-      width: 300px;
+      width: 250px;
+      height: 350px;
+      object-fit: cover;
       border-radius: 20px;
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
+      margin-bottom: 30px;
+      border: 3px solid crimson;
+    }
+    .about h2 {
+      color: crimson;
+      margin-bottom: 10px;
+    }
+    .about p {
+      max-width: 600px;
+      font-size: 1em;
+      color: #ccc;
     }
     .pricing {
-      background: #241e20;
+      background-color: #111;
+      color: white;
+      text-align: center;
     }
-    .pricing h2, .pricing p {
-      color: #e0c1d3;
+    .pricing h2 {
+      color: crimson;
+    }
+    .pricing p {
+      color: #ddd;
+      max-width: 600px;
+      margin: auto;
     }
     .gallery {
-      background: #000;
-      color: white;
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 400px;
+      background-color: #000;
+      overflow-x: scroll;
+      white-space: nowrap;
+      padding: 40px 10px;
     }
     .gallery img {
       width: 300px;
+      height: 200px;
+      object-fit: cover;
       margin: 0 10px;
-      transition: transform 0.3s, filter 0.3s;
+      border-radius: 10px;
+      display: inline-block;
+      transition: transform 0.3s;
     }
-    .gallery img:not(:nth-child(2)) {
-      transform: scale(0.8);
-      filter: blur(4px);
+    .gallery img:hover {
+      transform: scale(1.05);
     }
     .cta {
-      background: #1f1719;
-      padding: 100px 30px;
+      background-color: #0d0d0d;
+      color: white;
+      padding: 80px 20px;
     }
     .cta h2 {
-      color: #e0c1d3;
+      text-align: center;
+      color: crimson;
     }
-    .cta form {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 20px;
-      max-width: 800px;
+    form {
+      max-width: 600px;
       margin: auto;
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 20px;
     }
-    .cta form textarea {
-      grid-column: span 2;
-      height: 100px;
+    input, textarea {
+      padding: 15px;
+      background-color: #1a1a1a;
+      border: 1px solid crimson;
+      color: white;
+      border-radius: 8px;
     }
-    .cta form input, .cta form textarea {
-      padding: 10px;
-      font-size: 16px;
-      background: #2c2224;
-      color: #fff;
-      border: 1px solid #e0c1d3;
-    }
-    .cta button {
-      grid-column: span 2;
-      padding: 12px;
-      background: #e0c1d3;
-      color: #0f0d0e;
-      font-weight: bold;
+    button {
+      background-color: crimson;
       border: none;
+      padding: 15px;
+      color: white;
+      font-weight: bold;
+      border-radius: 8px;
       cursor: pointer;
-      transition: background 0.3s;
     }
-    .cta button:hover {
-      background: #ffffff;
+    button:hover {
+      background-color: #c00;
+    }
+    @media (min-width: 768px) {
+      .about {
+        flex-direction: row;
+        text-align: left;
+        justify-content: center;
+        gap: 50px;
+      }
+      .about p {
+        margin-top: 0;
+      }
     }
   </style>
 </head>
@@ -154,33 +185,36 @@
       <source src="https://cdn.coverr.co/videos/coverr-golden-sunset-9992/1080p.mp4" type="video/mp4">
     </video>
     <div class="content" data-aos="fade-up">
-      <h1>Welcome to The Goddess Xperience</h1>
-      <p>Unlock your divine potential</p>
+      <h1>The Goddess Xperience</h1>
+      <p>Awaken. Submit. Transcend.</p>
     </div>
   </section>  <section class="about" id="about">
-    <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="About me" data-aos="fade-right">
+    <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Goddess portrait" data-aos="fade-right">
     <div data-aos="fade-left">
       <h2>About Me</h2>
-      <p>I am your divine guide in this journey. Every experience with me is tailored to awaken your senses and elevate your soul. Let me show you the power of surrender.</p>
+      <p>I am the embodiment of divine feminine power. Through sensual domination and mindful control, I guide your descent into blissful surrender. Every moment with me is a ritual of worship and release.</p>
     </div>
-  </section>  <section class="section pricing" id="pricing">
+  </section>  <section class="pricing" id="pricing">
     <h2 data-aos="zoom-in">Session Costing</h2>
-    <p data-aos="fade-up"><strong>Basic:</strong> $100/session – Introductory experience.<br>
-       <strong>Premium:</strong> $250/session – Includes custom elements.<br>
-       <strong>Elite:</strong> $500/session – Total immersion and control-based session.
+    <p data-aos="fade-up">
+      <strong>Basic:</strong> $100/session – For those curious to begin the path.<br>
+      <strong>Premium:</strong> $250/session – Tailored ritual of control and surrender.<br>
+      <strong>Elite:</strong> $500/session – Total immersion, no boundaries.
     </p>
   </section>  <section class="gallery" id="gallery">
-    <img src="https://picsum.photos/id/237/300/200" alt="gallery1" data-aos="fade-up">
-    <img src="https://picsum.photos/id/238/300/200" alt="gallery2" data-aos="fade-up">
-    <img src="https://picsum.photos/id/239/300/200" alt="gallery3" data-aos="fade-up">
+    <img src="https://picsum.photos/id/1015/300/200" alt="gallery1" data-aos="fade-up">
+    <img src="https://picsum.photos/id/1016/300/200" alt="gallery2" data-aos="fade-up">
+    <img src="https://picsum.photos/id/1018/300/200" alt="gallery3" data-aos="fade-up">
+    <img src="https://picsum.photos/id/1019/300/200" alt="gallery4" data-aos="fade-up">
+    <img src="https://picsum.photos/id/1020/300/200" alt="gallery5" data-aos="fade-up">
   </section>  <section class="cta" id="cta">
-    <h2 data-aos="fade-down">Get in Touch</h2>
+    <h2 data-aos="fade-down">Enter the Temple</h2>
     <form data-aos="fade-up">
       <input type="text" placeholder="Name" required>
       <input type="text" placeholder="Fetlife ID">
       <input type="text" placeholder="Twitter ID">
       <input type="email" placeholder="Email" required>
-      <textarea placeholder="Your questions or interests..."></textarea>
+      <textarea placeholder="Your desires, questions or requests..."></textarea>
       <button type="submit">Submit</button>
     </form>
   </section>  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>  <script>
